[package]
name         = "icm42670"
version      = "0.1.1"
authors      = ["Jesse Braham <jesse@beta7.io>"]
edition      = "2021"
rust-version = "1.56"
description  = "An embedded-hal driver for the ICM-42670 6-axis IMU"
repository   = "https://github.com/jessebraham/icm42670"
license      = "MIT OR Apache-2.0"
keywords     = ["accelerometer", "gyro", "imu"]
categories   = ["aerospace", "embedded", "hardware-support", "no-std"]

[features]
default = ["async"]
async = ["embedded-hal-async"]

[dependencies]
accelerometer      = "0.12.0"

embedded-hal       = "0.2.7"
embedded-hal-async = { version = "1.0.0-rc.1", optional = true }